# stigmer

./: .bazelignore  .bazelrc  .gitignore  .goreleaser.yml  BUILD.bazel  COMPLETE_ALIGNMENT_SUMMARY.md  CONTRIBUTING.md  DOCKER_CHANGES_SUMMARY.md  FIX_SUMMARY.md  LEARNINGS_SUMMARY_2026-01-21.md  LICENSE  MODULE.bazel  Makefile  PHASE1_SUMMARY.md  README.md  REPO.bazel  STIGMER_NEW_COMMAND_SETUP.md  bazelw  buf.gen.yaml  buf.yaml  generator  go.mod  go.sum  go.work  go.work.sum
apis/stubs/python/stigmer/: pyproject.toml
backend/libs/go/apiresource/: BUILD.bazel  README.md  metadata.go  metadata_test.go
backend/libs/go/badger/: BUILD.bazel  store.go  store_test.go
backend/libs/go/grpc/: BUILD.bazel  README.md  inprocess.go  inprocess_test.go  server.go
backend/libs/go/grpc/request/: README.md
backend/libs/go/sqlite/: BUILD.bazel  README.md  store.go  store_test.go
backend/libs/go/store/: BUILD.bazel  interface.go
backend/libs/go/store/sqlite/: BUILD.bazel  store.go  store_test.go
backend/libs/python/graphton/: LICENSE  README.md  pyproject.toml
backend/services/agent-runner/: .dockerignore  BUILD.bazel  Dockerfile  MIGRATION-SUMMARY.md  Makefile  README.md  agent-runner.spec  docker-compose.yml  main.py  pyproject.toml  pytest.ini  run.sh  test-nuitka-compilation.sh  test_graphton_integration.py  test_multipart_import.py
backend/services/agent-runner/_kustomize/: LOCAL-LLM-SETUP.md
backend/services/agent-runner/_kustomize/base/: service.yaml
backend/services/agent-runner/_rules/implement-agent-runner-features/: implement-agent-runner-features.mdc  improve-this-rule.mdc
backend/services/agent-runner/docs/: CURRENT_IMPLEMENTATION.md  DOCUMENTATION_UPDATE_SUMMARY.md  MIGRATION_SUMMARY.md  README.md  docker.md  learning-log.md
backend/services/agent-runner/docs/architecture/: agent-execution-workflow.md  data-model.md  skill-architecture.md
backend/services/agent-runner/grpc_client/: __init__.py  agent_client.py  agent_execution_client.py  agent_instance_client.py  environment_client.py  session_client.py  skill_client.py
backend/services/agent-runner/hooks/: hook-multipart.py
backend/services/agent-runner/sandbox/: Dockerfile.sandbox.basic  Dockerfile.sandbox.full  README.md  docker-compose.sandbox.yml  requirements.txt
backend/services/agent-runner/tests/: __init__.py  conftest.py  test_integration_skill_pipeline.py  test_skill_client.py  test_skill_writer.py
backend/services/agent-runner/worker/: __init__.py  command_parser.py  component_type_inference.py  config.py  logging_config.py  redis_config.py  sandbox_manager.py  token_manager.py  worker.py
backend/services/workflow-runner/: BUG_TASK_EXPORT_CONTEXT.md  BUILD.bazel  Dockerfile  Makefile  README.md  example-workflow.yaml  go.mod  go.sum  main.go
backend/services/workflow-runner/docs/: .reorganization-summary.md  README.md
backend/services/workflow-runner/scripts/: setup-temporal-search-attributes.sh  test-search-attr-setup.sh
backend/services/workflow-runner/test/: DEBUG_PLAN.md  GRPC_TEST_COMMANDS.md  README.md  debug-endpoint-expression.yaml  test-context-variables.yaml  test-simple-fetch.yaml
backend/services/workflow-runner/worker/: BUILD.bazel  worker.go
client-apps/cli/: .gitignore  BUILD.bazel  COMMANDS.md  FEATURE_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  Makefile  README.md  RELEASE.md  go.mod  go.sum  main.go
client-apps/cli/cmd/stigmer/: BUILD.bazel  root.go
client-apps/cli/embedded/: .gitkeep  BUILD.bazel  README.md  embedded.go  embedded_darwin_amd64.go  embedded_darwin_arm64.go  embedded_linux_amd64.go  extract.go  sdk_version.go  version.go
client-apps/cli/pkg/display/: BUILD.bazel  colors.go  table.go  terminal.go
cmd/stigmer/: BUILD.bazel  main.go
sdk/go/templates/: BUILD.bazel  README.md  templates.go  templates_test.go
sdk/python/: README.md  pyproject.toml
sdk/python/_rules/implement-stigmer-sdk-features/: implement-python-sdk-features.mdc
sdk/python/docs/: README.md
sdk/python/docs/implementation/: status.md
sdk/python/examples/agents/: 01_basic_agent.py  02_agent_with_skills.py  03_agent_with_mcp_servers.py  README.md
sdk/python/stigmer/: __init__.py  exceptions.py
sdk/python/stigmer/agent/: __init__.py  agent.py  exceptions.py
sdk/python/tests/: __init__.py  conftest.py  utils.py
sdk/python/tests/agent/: __init__.py
sdk/python/tests/integration/: __init__.py  test_golden_01.py  test_golden_02.py
sdk/python/tests/unit/: __init__.py  test_call_activity_task.py  test_for_task.py  test_fork_task.py  test_grpc_task.py  test_http_task.py  test_listen_task.py  test_raise_task.py  test_run_task.py  test_set_task.py  test_switch_task.py  test_try_task.py  test_wait_task.py  test_workflow.py
tools/: BUILD.bazel  decode-manifest.go  go.mod  go.sum
tools/codegen/: README.md
tools/codegen/generator/: BUILD.bazel  main.go
tools/codegen/proto2schema/: BUILD.bazel  main.go
tools/codegen/schemas/agent/: agent.json
tools/codegen/schemas/agentexecution/: agentexecution.json
tools/codegen/schemas/agentinstance/: agentinstance.json
tools/codegen/schemas/environment/: environment.json
tools/codegen/schemas/executioncontext/: executioncontext.json
tools/codegen/schemas/skill/: skill.json
tools/codegen/schemas/tasks/: agent_call.json  agentcall.json  call_activity.json  callactivity.json  for.json  fork.json  grpc_call.json  grpccall.json  http_call.json  httpcall.json  listen.json  raise.json  run.json  set.json  switch.json  try.json  wait.json
tools/codegen/schemas/types/: agentexecutionconfig.json  catchblock.json  dockerserver.json  environmentspec.json  environmentvalue.json  export.json  forkbranch.json  http_endpoint.json  httpendpoint.json  httpserver.json  listento.json  mcpserverdefinition.json  mcptoolselection.json  portmapping.json  signalspec.json  switchcase.json  volumemount.json  workflowtask.json
tools/codegen/schemas/workflow/: signal.json  workflow.json
tools/codegen/schemas/workflowexecution/: workflowexecution.json
tools/codegen/schemas/workflowinstance/: workflowinstance.json
(+2706 files in other folders)
