module(
    name = "stigmer",
    version = "0.1.0",
)

# ─── Bazel modules ───────────────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# ─── Go SDK ──────────────────────────────────────────────────────────────────
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.24.6",
)

# ─── Go dependencies ─────────────────────────────────────────────────────────
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",  # keep: Required for buf/validate in generated protos
    "build_buf_go_protovalidate",  # keep: Required for protovalidate runtime validation
    "com_github_dgraph_io_badger_v4",
    "com_github_mattn_go_sqlite3",
    "com_github_pkg_errors",  # keep: Required for CLI error handling
    "com_github_rs_zerolog",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",  # keep: Required for CLI config YAML
    "org_golang_google_grpc",
    "org_golang_google_protobuf",  # keep: Required for protobuf types (timestamppb, structpb, etc.)
)

# ─── OCI base images ─────────────────────────────────────────────────────────
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Alpine Linux base image for Go services
oci.pull(
    name = "alpine_linux_amd64",
    digest = "sha256:beefdbd8a1da6d2915566fde36db9db0b524eb737fc57cd1367effd16dc0d06d",
    image = "index.docker.io/library/alpine",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "alpine_linux_amd64",
    "alpine_linux_amd64_linux_amd64",
)
