module(
    name = "stigmer",
    version = "0.1.0",
)

# ─── Bazel modules ───────────────────────────────────────────────────────────
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "29.3")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# ─── Go SDK ──────────────────────────────────────────────────────────────────
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.25.6",
)

# ─── Go dependencies ─────────────────────────────────────────────────────────
# Read Go deps from go.work (includes root + CLI + SDK modules)
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(
    go_deps,
    "build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go",  # keep: Required for protovalidate protobuf types
    "build_buf_go_protovalidate",  # keep: Required for protovalidate runtime validation
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_charmbracelet_bubbles",  # keep: Required for CLI UI components
    "com_github_charmbracelet_bubbletea",  # keep: Required for CLI TUI framework
    "com_github_charmbracelet_lipgloss",  # keep: Required for CLI styling
    "com_github_dgraph_io_badger_v3",
    "com_github_dgraph_io_badger_v4",
    "com_github_fatih_color",  # keep: Required for CLI colored output
    "com_github_fullstorydev_grpcurl",
    "com_github_go_playground_locales",
    "com_github_go_playground_universal_translator",
    "com_github_go_playground_validator_v10",
    "com_github_go_viper_mapstructure_v2",
    "com_github_google_uuid",
    "com_github_itchyny_gojq",
    "com_github_jhump_protoreflect",
    "com_github_joho_godotenv",
    "com_github_masterminds_semver_v3",
    "com_github_mrsimonemms_golang_helpers",
    "com_github_mrsimonemms_temporal_codec_server_packages_golang",
    "com_github_pkg_errors",  # keep: Required for CLI error handling
    "com_github_posthog_posthog_go",
    "com_github_rs_zerolog",
    "com_github_serverlessworkflow_sdk_go_v3",
    "com_github_spf13_cobra",  # keep: Required for CLI commands
    "com_github_spf13_viper",
    "com_github_stigmer_stigmer_apis_stubs_go",
    "com_github_stigmer_stigmer_backend_libs_go",
    "com_github_stigmer_stigmer_client_apps_cli",
    "com_github_stigmer_stigmer_sdk_go",
    "com_github_stretchr_testify",
    "in_gopkg_yaml_v3",  # keep: Required for CLI YAML config
    "io_k8s_sigs_yaml",
    "io_temporal_go_api",
    "io_temporal_go_sdk",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",  # keep: Required for protobuf types (timestamppb, structpb, etc.)
    "org_golang_x_term",  # keep: Required for CLI terminal operations
    "org_modernc_sqlite",  # keep: Required for SQLite storage backend
)

# ─── OCI base images ─────────────────────────────────────────────────────────
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Alpine Linux base image for Go services
oci.pull(
    name = "alpine_linux_amd64",
    digest = "sha256:beefdbd8a1da6d2915566fde36db9db0b524eb737fc57cd1367effd16dc0d06d",
    image = "index.docker.io/library/alpine",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "alpine_linux_amd64",
    "alpine_linux_amd64_linux_amd64",
)
