load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tools_lib",
    srcs = ["decode-manifest.go"],
    importpath = "github.com/stigmer/stigmer/tools",
    visibility = ["//visibility:private"],
    deps = [
        "//apis/stubs/go/ai/stigmer/agentic/agent/v1:agent",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "tools",
    embed = [":tools_lib"],
    visibility = ["//visibility:public"],
)
