load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/stigmer/stigmer/client-apps/cli",
    visibility = ["//visibility:private"],
    deps = ["//client-apps/cli/cmd/stigmer"],
)

go_binary(
    name = "stigmer",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
