load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stigmer_lib",
    srcs = ["main.go"],
    importpath = "github.com/stigmer/stigmer/cmd/stigmer",
    visibility = ["//visibility:private"],
    deps = ["@com_github_spf13_cobra//:cobra"],
)

go_binary(
    name = "stigmer",
    embed = [":stigmer_lib"],
    visibility = ["//visibility:public"],
)
