load("@rules_go//go:def.bzl", "go_binary", "go_library")

# Workflow Runner Service
# This is a marker BUILD file to make the workflow-runner directory a Bazel package.
# The actual service code is defined in subdirectories.

go_library(
    name = "workflow-runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/stigmer/stigmer/backend/services/workflow-runner",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/services/workflow-runner/pkg/config",
        "//backend/services/workflow-runner/pkg/env",
        "//backend/services/workflow-runner/pkg/grpc",
        "//backend/services/workflow-runner/worker",
        "//backend/services/workflow-runner/worker/config",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "workflow-runner",
    embed = [":workflow-runner_lib"],
    visibility = ["//visibility:public"],
)
