load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "embedded",
    srcs = [
        "embedded.go",
        "embedded_darwin_amd64.go",
        "embedded_darwin_arm64.go",
        "embedded_linux_amd64.go",
        "extract.go",
        "version.go",
    ],
    importpath = "github.com/stigmer/stigmer/client-apps/cli/embedded",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@com_github_rs_zerolog//log",
    ],
)
