load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["templates.go"],
    importpath = "github.com/stigmer/stigmer/sdk/go/templates",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["templates_test.go"],
    embed = [":go_default_library"],
)
