load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "generator_lib",
    srcs = ["main.go"],
    importpath = "github.com/stigmer/stigmer/tools/codegen/generator",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "generator",
    embed = [":generator_lib"],
    visibility = ["//visibility:public"],
)
