load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sqlite",
    srcs = ["store.go"],
    importpath = "github.com/stigmer/stigmer/backend/libs/go/sqlite",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)

go_test(
    name = "sqlite_test",
    srcs = ["store_test.go"],
    embed = [":sqlite"],
    deps = [
        "//internal/gen/ai/stigmer/agentic/agent/v1:agent",
        "//internal/gen/ai/stigmer/commons/apiresource",
        "@org_golang_google_protobuf//proto",
    ],
)
