load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "store",
    srcs = ["interface.go"],
    importpath = "github.com/stigmer/stigmer/backend/libs/go/store",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/stubs/go/ai/stigmer/commons/apiresource/apiresourcekind",
        "@org_golang_google_protobuf//proto",
    ],
)
