[tool.poetry]
name = "graphton"
version = "0.1.0"
description = "Declarative agent creation framework for LangGraph (Stigmer local copy)"
authors = ["Stigmer <engineering@stigmer.ai>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["langgraph", "langchain", "agents", "mcp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "graphton", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
deepagents = ">=0.2.4,<0.3.0"
langgraph = ">=1.0.0,<2.0.0"
langchain = ">=1.0.0,<2.0.0"
langchain-anthropic = ">=1.0.0,<2.0.0"
langchain-openai = ">=1.0.0,<2.0.0"
langchain-mcp-adapters = ">=0.1.9,<0.2.0"
pydantic = ">=2.0.0,<3.0.0"
nest-asyncio = ">=1.6.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.6.0"
mypy = ">=1.10.0"
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "UP", "N", "ANN"]
ignore = ["D401", "D417", "E501", "ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

