load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "display",
    srcs = [
        "colors.go",
        "table.go",
        "terminal.go",
    ],
    importpath = "github.com/stigmer/stigmer/client-apps/cli/pkg/display",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fatih_color//:color",
        "@com_github_rivo_uniseg//:uniseg",
        "@org_golang_x_term//:term",
    ],
)
