load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/stigmer/stigmer/backend/services/stigmer-server/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//apis/stubs/go/ai/stigmer/agentic/agent/v1:agent",
        "//apis/stubs/go/ai/stigmer/agentic/agentexecution/v1:agentexecution",
        "//apis/stubs/go/ai/stigmer/agentic/agentinstance/v1:agentinstance",
        "//apis/stubs/go/ai/stigmer/agentic/environment/v1:environment",
        "//apis/stubs/go/ai/stigmer/agentic/executioncontext/v1:executioncontext",
        "//apis/stubs/go/ai/stigmer/agentic/session/v1:session",
        "//apis/stubs/go/ai/stigmer/agentic/skill/v1:skill",
        "//apis/stubs/go/ai/stigmer/agentic/workflow/v1:workflow",
        "//apis/stubs/go/ai/stigmer/agentic/workflowexecution/v1:workflowexecution",
        "//apis/stubs/go/ai/stigmer/agentic/workflowinstance/v1:workflowinstance",
        "//backend/libs/go/badger",
        "//backend/libs/go/grpc",
        "//backend/libs/go/grpc/interceptors/apiresource",
        "//backend/services/stigmer-server/pkg/config",
        "//backend/services/stigmer-server/pkg/domain/agent/controller",
        "//backend/services/stigmer-server/pkg/domain/agentexecution/controller",
        "//backend/services/stigmer-server/pkg/domain/agentexecution/temporal",
        "//backend/services/stigmer-server/pkg/domain/agentinstance/controller",
        "//backend/services/stigmer-server/pkg/domain/environment/controller",
        "//backend/services/stigmer-server/pkg/domain/executioncontext/controller",
        "//backend/services/stigmer-server/pkg/domain/session/controller",
        "//backend/services/stigmer-server/pkg/domain/skill/controller",
        "//backend/services/stigmer-server/pkg/domain/workflow/controller",
        "//backend/services/stigmer-server/pkg/domain/workflow/temporal",
        "//backend/services/stigmer-server/pkg/domain/workflowexecution/controller",
        "//backend/services/stigmer-server/pkg/domain/workflowexecution/temporal",
        "//backend/services/stigmer-server/pkg/domain/workflowexecution/temporal/workflows",
        "//backend/services/stigmer-server/pkg/domain/workflowinstance/controller",
        "//backend/services/stigmer-server/pkg/downstream/agent",
        "//backend/services/stigmer-server/pkg/downstream/agentinstance",
        "//backend/services/stigmer-server/pkg/downstream/session",
        "//backend/services/stigmer-server/pkg/downstream/workflow",
        "//backend/services/stigmer-server/pkg/downstream/workflowinstance",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@io_temporal_go_sdk//client",
        "@io_temporal_go_sdk//log",
        "@io_temporal_go_sdk//worker",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
