load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/stigmer/stigmer/backend/services/stigmer-server/cmd/server",
    visibility = ["//visibility:private"],
    deps = ["//backend/services/stigmer-server/pkg/server"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
