load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "debug",
    srcs = ["http.go"],
    importpath = "github.com/stigmer/stigmer/backend/services/stigmer-server/pkg/debug",
    visibility = ["//visibility:public"],
    deps = [
        "//apis/stubs/go/ai/stigmer/agentic/agent/v1:agent",
        "//apis/stubs/go/ai/stigmer/agentic/agentexecution/v1:agentexecution",
        "//apis/stubs/go/ai/stigmer/agentic/agentinstance/v1:agentinstance",
        "//apis/stubs/go/ai/stigmer/agentic/session/v1:session",
        "//backend/libs/go/badger",
        "@com_github_dgraph_io_badger_v4//:badger",
        "@com_github_rs_zerolog//log",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
    ],
)
