load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "supervisor",
    srcs = ["supervisor.go"],
    importpath = "github.com/stigmer/stigmer/backend/services/stigmer-server/pkg/supervisor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:errors",
        "@com_github_rs_zerolog//log",
    ],
)
