load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "grpc-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/stigmer/stigmer/backend/services/workflow-runner/cmd/grpc-server",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/services/workflow-runner/pkg/config",
        "//backend/services/workflow-runner/pkg/grpc",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
    ],
)

go_binary(
    name = "grpc-server",
    embed = [":grpc-server_lib"],
    visibility = ["//visibility:public"],
)
