load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "worker_lib",
    srcs = [
        "generateDocs.go",
        "main.go",
        "root.go",
        "version.go",
    ],
    importpath = "github.com/leftbin/stigmer-cloud/backend/services/workflow-runner/cmd/worker",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/services/workflow-runner/pkg/telemetry",
        "//backend/services/workflow-runner/pkg/utils",
        "//backend/services/workflow-runner/pkg/zigflow",
        "@com_github_mrsimonemms_golang_helpers//:golang-helpers",
        "@com_github_mrsimonemms_golang_helpers//temporal",
        "@com_github_mrsimonemms_temporal_codec_server_packages_golang//algorithms/aes",
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_cobra//doc",
        "@com_github_spf13_viper//:viper",
        "@io_temporal_go_sdk//client",
        "@io_temporal_go_sdk//converter",
        "@io_temporal_go_sdk//worker",
    ],
)

go_binary(
    name = "worker",
    embed = [":worker_lib"],
    visibility = ["//visibility:public"],
)
